--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Coneve"
         tools:targetApi="31">
+        <service
+            android:name=".maintainerService"
+            android:enabled="true"
+            android:exported="false">
+
+        </service>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
