--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
     //firebase realtime database
     implementation 'com.google.firebase:firebase-database'
+    //firebase storage
+    implementation 'com.google.firebase:firebase-storage'
 }
