--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     //firebase storage
     implementation 'com.google.firebase:firebase-storage'
+
+    // glide (image loading)
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
