--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:theme="@style/Theme.Coneve"
         tools:targetApi="31">
         <activity
+            android:name=".add_event"
+            android:exported="false" />
+        <activity
             android:name=".PerEventView"
             android:exported="false" />
 
         <service
             android:name=".maintainerService"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
