--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Coneve"
         tools:targetApi="31">
         <activity
+            android:name=".per_event_feedback"
+            android:exported="false" />
+        <activity
             android:name=".OrganizerActivity"
             android:exported="false" />
         <activity
@@ -35,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
