--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //splashscreen
+    implementation 'com.airbnb.android:lottie:3.4.4'
     //firebase bom
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     //firebase analytics
